--- a/index.html
+++ b/index.html
@@ -4,6 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Food Truck</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <script type="module" src="app.js"></script>
   </head>
-  <body></body>
+  <body>
+    <section class="menu-vy">
+      <div class="cart-btn">
+        <span class="menu-red-badge"> 10 </span>
+        <img src="images/cart.png" alt="lock icon" />
+      </div>
+      <h1>MENY</h1>
+      <section class="menu"></section>
+
+      <section class="dips">
+        <h2>DIPSÅS <span class="dots">/</span>19 SEK</h2>
+        <div class="dips-btn"></div>
+      </section>
+
+      <section class="drinks">
+        <h2>DRICKA<span class="dots">/</span>19 SEK</h2>
+        <div class="drinks-btn"></div>
+      </section>
+    </section>
+  </body>
 </html>
