style menu vy colors/lock icon

--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
     <section class="menu-vy">
       <div class="cart-btn">
         <div class="note-cart hide">10</div>
-        <img src="images/cart.png" alt="lock icon" />
+        <img src="images/cart btn (5).png" alt="lock icon" />
       </div>
       <h1>MENY</h1>
 
       <section class="menu"></section>
 
       <section class="dips">
-        <h2>DIPSÅS <span class="dots">/</span>19 SEK</h2>
+        <h2>DIPSÅS <span class="dots"></span>19 SEK</h2>
         <div class="dips-btn"></div>
       </section>
 
       <section class="drinks">
-        <h2>DRICKA<span class="dots">/</span>19 SEK</h2>
+        <h2>DRICKA<span class="dots"></span>19 SEK</h2>
         <div class="drinks-btn"></div>
       </section>
     </section>
